    * Adds DPoPTokenError.USE_DPOP_NONCE constant.

version 9.43.1 (2022-09-09)
    * Updates Nimbus JOSE+JWT to 9.24.4

version 10.0 (2022-10-24)
    * Breaking change, upgrades OpenID Connect Federation 1.0 support to draft
      24.
    * Updates EntityStatement (breaking change).
    * Updates EntityStatementClaimsSet (breaking change).
    * Renames FederationMetadataType to EntityType.
    * Updates EndpointName (breaking change).
    * Updates OIDCProviderMetadata with new federation parameters.
    * Updates AuthorizationServerMetadata with new federation parameters.
    * Adds signed_jwks_uri support to ClientMetadata for OpenID Connect
      Federation 1.0.
    * Updates FederationEntityMetadata.
    * Updates FederationMetadataType.
    * Updates TrustMarkClaimsSet (breaking change).
    * Adds TrustMarkEntry.
    * Adds TrustMarkIssuerMetadata.
    * Adds LeafEntityTypeConstraint.
    * Adds ResolveStatement for use by the ResolveResponse.
    * Adds ResolveClaimsSet.
    * Updates TrustChainConstraints with new leaf type constraints.
    * Updates the Federation API classes (breaking changes).
    * Updates TrustChain and TrustChain resolver (breaking changes).
    * Factors out common federation JWT methods into JWTUtils.
    * Adds trust_chain support in AuthorizationRequest and
      AuthenticationRequest.
    * Adds static ClaimsSet.getJSONArrayClaim method.

version 10.1 (2022-10-27)
    * Adds HTTPRequestConfigurator interface.
    * Adds new static OIDCProviderMetadata.resolve(Issuer,
      HTTPRequestConfigurator) method.
    * Adds new static AuthorizationServerMetadata.resolve(Issuer,
      HTTPRequestConfigurator) method.

version 10.2 (2022-10-31)
    * TrustMarkStatusRequest must use HTTP POST.

version 10.2.1 (2022-12-05)
    * Fixes OIDCProviderMetadata backchannel_logout_session_supported parse bug
      (iss #404).

version 10.3 (2022-12-06)
    * Updates EntityListingRequest to support entity_type parameter.