@@ -2129,3 +2129,4 @@ version 10.2.1 (2022-12-05)
 
 version 10.3 (2022-12-06)
     * Updates EntityListingRequest to support entity_type parameter.
+    * Adds OAuth2Error.UNSUPPORTED_PARAMETER (unsupported_parameter) error.
